--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "devDependencies": {
         "@babel/core": "^7.18.6",
         "buffer": "^6.0.3",
+        "events": "^3.3.0",
         "parcel": "^2.6.2",
         "process": "^0.11.10",
         "punycode": "^1.4.1",
