nodeJs Server Created and Connected, Firebase Registration Connected,  HTML to EJS Converted

--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "version": "3.0.1",
     "description": "This is the core framework of Blueprint-js for creating floorplans in 2d and 3d",
     "scripts": {
+        "start": "nodemon server.js",
         "app-dev": "parcel src/index.html --dist-dir app/",
         "for-git-demo-dev": "parcel src/index.html --dist-dir demo/ --public-url ./",
         "app-production": "parcel build src/index.html --dist-dir app/ --no-source-maps --experimental-scope-hoisting",
@@ -27,17 +28,28 @@
         "@thi.ng/geom-hull": "0.0.27",
         "alpha-shape": "^1.0.0",
         "bezier-js": "^2.4.0",
+        "body-parser": "^1.20.2",
         "braces": "^2.3.2",
+        "cors": "^2.8.5",
         "deasync": "^0.1.21",
         "detect-touch-device": "^1.1.5",
+        "dotenv": "^16.3.1",
+        "ejs": "^3.1.9",
         "es6-enum": "^1.1.0",
+        "express": "^4.18.2",
+        "express-session": "^1.17.3",
         "file-save": "^0.2.0",
         "file-saver": "^2.0.5",
         "fps-now": "^3.1.1",
+        "fs": "^0.0.1-security",
         "gsap": "^3.5.0",
+        "http": "^0.0.1-security",
         "jszip": "^3.5.0",
         "line-intersect": "^2.2.1",
+        "mongodb": "^6.1.0",
+        "mongoose": "^7.5.3",
         "node-gyp": "^9.0.0",
+        "nodemon": "^3.0.1",
         "pixi-viewport": "^4.18.0",
         "pixi.js": "^6.4.2",
         "point-in-polygon": "^1.1.0",
