MongoDB Connected, Adding UserModel To DB when REgestir and navigating to Dashboard, REgistration and Login tested

--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
 PORT=5500
+CONNECTION_STRING=mongodb+srv://amirsadeveloping:smartinteriordesign@cluster0.hdlqhvv.mongodb.net/?retryWrites=true&w=majority
